[tool.setuptools]
packages = ["pybinbot", "pybinbot.shared", "pybinbot.models"]

[tool.setuptools.package-data]
pybinbot = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pybinbot"
version = "0.1.7"
description = "Utility functions for the binbot project."
authors = [
    { name="Carlos Wu", email="carkodw@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic[email]>=2.0.0",
    "numpy==2.2.0",
    "pandas>=2.2.3",
    "pymongo==4.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff"
]
